// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown-field can mount "localized" Markdown field 1`] = `
<div id="app">
    <div class="SharpMarkdown">
        <div class="SharpModule__inner"><textarea style="display: none;"></textarea>
            <div class="editor-toolbar"><a title="LOCALIZED (Ctrl-B)" tabindex="-1" class="fa fa-bold"></a><a title="LOCALIZED (Ctrl-I)" tabindex="-1" class="fa fa-italic"></a><a title="LOCALIZED (Ctrl-H)" tabindex="-1" class="fa fa-header"></a><i class="separator">|</i><a title="LOCALIZED (Ctrl-')"
                    tabindex="-1" class="fa fa-quote-left"></a><a title="LOCALIZED (Ctrl-L)" tabindex="-1" class="fa fa-list-ul"></a><a title="LOCALIZED (Ctrl-Alt-L)" tabindex="-1" class="fa fa-list-ol"></a><i class="separator">|</i><a title="LOCALIZED (Ctrl-K)"
                    tabindex="-1" class="fa fa-link"></a><a title="LOCALIZED" tabindex="-1" class="fa fa-picture-o"></a><i class="separator">|</i><a title="LOCALIZED (Ctrl-P)" tabindex="-1" class="fa fa-eye no-disable"></a><a title="LOCALIZED (F9)" tabindex="-1"
                    class="fa fa-columns no-disable no-mobile"></a><a title="LOCALIZED (F11)" tabindex="-1" class="fa fa-arrows-alt no-disable no-mobile"></a><i class="separator">|</i><a title="LOCALIZED" tabindex="-1" class="fa fa-question-circle" href="https://simplemde.com/markdown-guide"
                    target="_blank"></a></div>
            <div class="CodeMirror cm-s-paper CodeMirror-wrap CodeMirror-empty" style="width: auto; height: 310px;">
                <div style="overflow: hidden; position: relative; width: 3px; height: 0px;"><textarea style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0"></textarea></div>
                <div class="CodeMirror-vscrollbar" cm-not-content="true">
                    <div style="min-width: 1px;"></div>
                </div>
                <div class="CodeMirror-hscrollbar" cm-not-content="true">
                    <div style="height: 100%; min-height: 1px;"></div>
                </div>
                <div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div>
                <div class="CodeMirror-gutter-filler" cm-not-content="true"></div>
                <div class="CodeMirror-scroll" tabindex="-1">
                    <div class="CodeMirror-sizer" style="margin-left: 0px;">
                        <div style="position: relative;">
                            <div class="CodeMirror-lines" role="presentation">
                                <div style="position: relative; outline: none;" role="presentation">
                                    <pre style="height: 0px; overflow: visible;" class="CodeMirror-placeholder">Champ md</pre>
                                    <div class="CodeMirror-measure">
                                        <pre><span>xxxxxxxxxx</span></pre>
                                    </div>
                                    <div class="CodeMirror-measure"></div>
                                    <div style="position: relative; z-index: 1;"></div>
                                    <div class="CodeMirror-cursors"></div>
                                    <div class="CodeMirror-code" role="presentation"></div>
                                </div>
                            </div>
                        </div>
                    </div>
                    <div style="position: absolute; height: 30px; width: 1px;"></div>
                    <div class="CodeMirror-gutters" style="display: none;"></div>
                </div>
            </div>
            <div class="editor-preview-side"></div>
            <div class="editor-statusbar"><span class="autosave"></span><span class="lines">1</span><span class="words">0</span><span class="cursor">0:0</span></div>
        </div>
    </div>
</div>
`;

exports[`markdown-field can mount "read only" Markdown field 1`] = `
<div id="app">
    <div class="SharpMarkdown SharpMarkdown--read-only">
        <div class="SharpModule__inner"><textarea style="display: none;"></textarea>
            <div class="editor-toolbar"><a tabindex="-1" class="fa fa-bold"></a><a tabindex="-1" class="fa fa-italic"></a><a tabindex="-1" class="fa fa-header"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-quote-left"></a><a tabindex="-1" class="fa fa-list-ul"></a>
                <a
                    tabindex="-1" class="fa fa-list-ol"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-link"></a><a tabindex="-1" class="fa fa-picture-o"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-eye no-disable"></a><a tabindex="-1" class="fa fa-columns no-disable no-mobile"></a>
                    <a
                        tabindex="-1" class="fa fa-arrows-alt no-disable no-mobile"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-question-circle"></a></div>
            <div class="CodeMirror cm-s-paper CodeMirror-wrap CodeMirror-empty" style="width: auto; height: 310px;">
                <div style="overflow: hidden; position: relative; width: 3px; height: 0px;"><textarea style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0"></textarea></div>
                <div class="CodeMirror-vscrollbar" cm-not-content="true">
                    <div style="min-width: 1px;"></div>
                </div>
                <div class="CodeMirror-hscrollbar" cm-not-content="true">
                    <div style="height: 100%; min-height: 1px;"></div>
                </div>
                <div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div>
                <div class="CodeMirror-gutter-filler" cm-not-content="true"></div>
                <div class="CodeMirror-scroll" tabindex="-1">
                    <div class="CodeMirror-sizer" style="margin-left: 0px;">
                        <div style="position: relative;">
                            <div class="CodeMirror-lines" role="presentation">
                                <div style="position: relative; outline: none;" role="presentation">
                                    <pre style="height: 0px; overflow: visible;" class="CodeMirror-placeholder">Champ md</pre>
                                    <div class="CodeMirror-measure">
                                        <pre><span>xxxxxxxxxx</span></pre>
                                    </div>
                                    <div class="CodeMirror-measure"></div>
                                    <div style="position: relative; z-index: 1;"></div>
                                    <div class="CodeMirror-cursors"></div>
                                    <div class="CodeMirror-code" role="presentation"></div>
                                </div>
                            </div>
                        </div>
                    </div>
                    <div style="position: absolute; height: 30px; width: 1px;"></div>
                    <div class="CodeMirror-gutters" style="display: none;"></div>
                </div>
            </div>
            <div class="editor-preview-side"></div>
            <div class="editor-statusbar"><span class="autosave"></span><span class="lines">1</span><span class="words">0</span><span class="cursor">0:0</span></div>
        </div>
    </div>
</div>
`;

exports[`markdown-field can mount Markdown field 1`] = `
<div id="app">
    <div class="SharpMarkdown">
        <div class="SharpModule__inner"><textarea style="display: none;"></textarea>
            <div class="editor-toolbar"><a tabindex="-1" class="fa fa-bold"></a><a tabindex="-1" class="fa fa-italic"></a><a tabindex="-1" class="fa fa-header"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-quote-left"></a><a tabindex="-1" class="fa fa-list-ul"></a>
                <a
                    tabindex="-1" class="fa fa-list-ol"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-link"></a><a tabindex="-1" class="fa fa-picture-o"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-eye no-disable"></a><a tabindex="-1" class="fa fa-columns no-disable no-mobile"></a>
                    <a
                        tabindex="-1" class="fa fa-arrows-alt no-disable no-mobile"></a><i class="separator">|</i><a tabindex="-1" class="fa fa-question-circle" href="https://simplemde.com/markdown-guide" target="_blank"></a></div>
            <div class="CodeMirror cm-s-paper CodeMirror-wrap CodeMirror-empty" style="width: auto; height: 310px;">
                <div style="overflow: hidden; position: relative; width: 3px; height: 0px;"><textarea style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0"></textarea></div>
                <div class="CodeMirror-vscrollbar" cm-not-content="true">
                    <div style="min-width: 1px;"></div>
                </div>
                <div class="CodeMirror-hscrollbar" cm-not-content="true">
                    <div style="height: 100%; min-height: 1px;"></div>
                </div>
                <div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div>
                <div class="CodeMirror-gutter-filler" cm-not-content="true"></div>
                <div class="CodeMirror-scroll" tabindex="-1">
                    <div class="CodeMirror-sizer" style="margin-left: 0px;">
                        <div style="position: relative;">
                            <div class="CodeMirror-lines" role="presentation">
                                <div style="position: relative; outline: none;" role="presentation">
                                    <pre style="height: 0px; overflow: visible;" class="CodeMirror-placeholder">Champ md</pre>
                                    <div class="CodeMirror-measure">
                                        <pre><span>xxxxxxxxxx</span></pre>
                                    </div>
                                    <div class="CodeMirror-measure"></div>
                                    <div style="position: relative; z-index: 1;"></div>
                                    <div class="CodeMirror-cursors"></div>
                                    <div class="CodeMirror-code" role="presentation"></div>
                                </div>
                            </div>
                        </div>
                    </div>
                    <div style="position: absolute; height: 30px; width: 1px;"></div>
                    <div class="CodeMirror-gutters" style="display: none;"></div>
                </div>
            </div>
            <div class="editor-preview-side"></div>
            <div class="editor-statusbar"><span class="autosave"></span><span class="lines">1</span><span class="words">0</span><span class="cursor">0:0</span></div>
        </div>
    </div>
</div>
`;
